--- a/Home/style.css
+++ b/Home/style.css
@@ -6,6 +6,28 @@
   overflow-x: hidden;
 }
 
+.quote {
+  position: relative;
+  display: flex;
+  width: fit-content;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 30px; /* 125% */
+  margin: auto;
+  text-align: left;
+  float: auto;
+  vertical-align: middle;
+  left: -250px;
+  bottom: -25px;
+}
+
 .homepage .hero {
   position: absolute;
   width: auto;
@@ -227,7 +249,7 @@
   width: 100%;
   height: 657px;
   top: 58px;
-  left: 249px;
+  left: 150px;
 }
 
 .homepage .div-wrapper {
@@ -431,7 +453,7 @@
   width: 579px;
   height: 579px;
   top: 388px;
-  left: 874px;
+  left: 674px;
   transform: rotate(-91.89deg);
 }
 
@@ -440,7 +462,7 @@
   width: 312px;
   height: 394px;
   top: -1px;
-  left: 400px;
+  left: 0px;
 }
 
 .homepage .ellipse-4 {
@@ -518,7 +540,7 @@
   width: 1367px;
   height: 927px;
   margin-right: -127px;
-  left: 125px;
+  left: 0px;
 }
 
 .homepage .where-creativity-3 {
@@ -863,7 +885,7 @@
   width: 1019px;
   height: 638px;
   top: 72px;
-  left: 211px;
+  left: 100px;
 }
 
 .homepage .where-creativity-5 {
